--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x111533c79c8>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x214fdc72408>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Module(object):\n",
-    "    def __init__:\n",
+    "    def __init__(self):\n",
     "        self.parameters = []\n",
     "        \n",
     "    def forward(self, *input):\n",
