--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x214fdc72408>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x1ef430f11c8>"
       ]
      },
      "execution_count": 1,
@@ -25,6 +25,7 @@
    ],
    "source": [
     "import torch\n",
+    "import math\n",
     "torch.set_grad_enabled(False)"
    ]
   },
@@ -46,6 +47,31 @@
     "        \n",
     "    def param(self):\n",
     "        return self.parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Linear(Module):\n",
+    "    def __init__(self, in_features, out_features, bias=False):\n",
+    "        init_range = math.sqrt(in_features)\n",
+    "        self.weights = torch.Tensor(in_features, out_features).uniform_(-init_range, init_range)\n",
+    "        if bias:\n",
+    "            self.bias = torch.Tensor(out_features).uniform_(-init_range, init_range)\n",
+    "        else:\n",
+    "            self.bias = None\n",
+    "        \n",
+    "    def forward(self, input_):\n",
+    "        if self.bias != None:\n",
+    "            return torch.addmm(self.bias, input_, self.weights)\n",
+    "        else:\n",
+    "            return input_.matmul(self.weights)\n",
+    "        \n",
+    "    def backward(self):\n",
+    "        pass"
    ]
   },
   {
