implemented linear layer

--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x1ef430f11c8>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x1d22221c588>"
       ]
      },
      "execution_count": 1,
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,19 +59,26 @@
     "    def __init__(self, in_features, out_features, bias=False):\n",
     "        init_range = math.sqrt(in_features)\n",
     "        self.weights = torch.Tensor(in_features, out_features).uniform_(-init_range, init_range)\n",
+    "        self.grad_w = torch.zeros((in_features, out_features))\n",
     "        if bias:\n",
     "            self.bias = torch.Tensor(out_features).uniform_(-init_range, init_range)\n",
+    "            self.grad_b = torch.zeros(out_features)\n",
     "        else:\n",
     "            self.bias = None\n",
     "        \n",
     "    def forward(self, input_):\n",
+    "        self.input = input_\n",
     "        if self.bias != None:\n",
     "            return torch.addmm(self.bias, input_, self.weights)\n",
     "        else:\n",
     "            return input_.matmul(self.weights)\n",
     "        \n",
-    "    def backward(self):\n",
-    "        pass"
+    "    def backward(self, grad_output):\n",
+    "        self.grad_w += self.input.t().matmul(grad_output)\n",
+    "        grad_input = grad_output.matmul(self.weights.t())\n",
+    "        if self.bias != None:\n",
+    "            self.grad_b += grad_output.sum(dim=0)\n",
+    "        return grad_input"
    ]
   },
   {
