--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x1d22221c588>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x189004afa08>"
       ]
      },
      "execution_count": 1,
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,15 +110,33 @@
     "        pass\n",
     "    \n",
     "    def forward(self, input_, target):\n",
-    "        return (input_ - target).pow(2)\n",
+    "        if target.dim() == 1:\n",
+    "            target = target.view(target.size(0), 1)\n",
+    "        return (input_ - target).pow(2).sum()\n",
     "    \n",
     "    def backward(self, input_, target):\n",
+    "        if target.dim() == 1:\n",
+    "            target = target.view(target.size(0), 1)\n",
+    "        \n",
     "        return (input_ - target).mul(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sequential(Module):\n",
+    "    def __init__(self, *args):\n",
+    "        self.parameters = []\n",
+    "        for module in args:\n",
+    "            self.parameters += module.parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,27 +145,26 @@
     "    target = input_.sub(0.5).pow(2).sum(axis=1).sub(1 / math.pi ** 2).sign().add(1).div(2)\n",
     "    return input_, target\n",
     "\n",
-    "train_input, train_target = generate_set(1000)\n",
-    "test_input, test_target = generate_set(1000)"
+    "train_input, train_target = generate_set(20)\n",
+    "test_input, test_target = generate_set(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Model:\n",
-    "    def __init__(self, layers, loss):\n",
+    "    def __init__(self, layers):\n",
     "        self.layers = layers\n",
-    "        self.loss = loss\n",
     "        self.parameters = []\n",
     "        for layer in layers:\n",
     "            self.parameters += layer.parameters\n",
     "    \n",
     "    def zero_grad(self):\n",
-    "        for param in self.parameters:\n",
-    "            param[1].zero_()\n",
+    "        for w, dw in self.parameters:\n",
+    "            dw.zero_()\n",
     "    \n",
     "    def forward(self, input_):\n",
     "        x = input_\n",
@@ -155,7 +172,112 @@
     "            x = layer.forward(x)\n",
     "        return x\n",
     "    \n",
-    "    "
+    "    def backward(self, loss_grad):\n",
+    "        y = loss_grad\n",
+    "        for layer in reversed(self.layers):\n",
+    "            y = layer.backward(y)\n",
+    "        return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SGD:\n",
+    "    def __init__(self, parameters, learning_rate):\n",
+    "        self.parameters = parameters\n",
+    "        self.learning_rate = learning_rate\n",
+    "        \n",
+    "    def step(self):\n",
+    "        for w, dw in self.parameters:\n",
+    "            w -= self.learning_rate * dw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layers = [Linear(2, 10), ReLU(), Linear(10, 5), ReLU(), Linear(5, 1)]\n",
+    "model = Model(layers)\n",
+    "sgd = SGD(model.parameters, 0.0001)\n",
+    "loss = MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "40.804527282714844\n",
+      "1\n",
+      "38.16957092285156\n",
+      "2\n",
+      "35.781131744384766\n",
+      "3\n",
+      "33.610416412353516\n",
+      "4\n",
+      "31.632753372192383\n",
+      "5\n",
+      "29.82686996459961\n",
+      "6\n",
+      "28.174400329589844\n",
+      "7\n",
+      "26.65934944152832\n",
+      "8\n",
+      "25.267751693725586\n",
+      "9\n",
+      "23.97368621826172\n",
+      "10\n",
+      "22.728851318359375\n",
+      "11\n",
+      "21.584157943725586\n",
+      "12\n",
+      "20.52997398376465\n",
+      "13\n",
+      "19.55377960205078\n",
+      "14\n",
+      "18.647554397583008\n",
+      "15\n",
+      "17.809160232543945\n",
+      "16\n",
+      "17.032548904418945\n",
+      "17\n",
+      "16.31233024597168\n",
+      "18\n",
+      "15.643628120422363\n",
+      "19\n",
+      "15.022071838378906\n",
+      "20\n",
+      "14.44438648223877\n",
+      "21\n",
+      "13.908090591430664\n",
+      "22\n",
+      "13.407808303833008\n",
+      "23\n",
+      "12.935386657714844\n",
+      "24\n",
+      "12.489516258239746\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(25):\n",
+    "    print(epoch)\n",
+    "    model.zero_grad()\n",
+    "    output = model.forward(train_input)\n",
+    "    print(loss.forward(output, train_target).item())\n",
+    "    loss_grad = loss.backward(output, train_target)\n",
+    "    model.backward(loss_grad)\n",
+    "    sgd.step()"
    ]
   },
   {
