--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x189004afa08>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x25b39560e88>"
       ]
      },
      "execution_count": 1,
@@ -131,7 +131,8 @@
     "    def __init__(self, *args):\n",
     "        self.parameters = []\n",
     "        for module in args:\n",
-    "            self.parameters += module.parameters"
+    "            self.parameters += module.parameters\n",
+    "# TODO !!!"
    ]
   },
   {
@@ -145,8 +146,8 @@
     "    target = input_.sub(0.5).pow(2).sum(axis=1).sub(1 / math.pi ** 2).sign().add(1).div(2)\n",
     "    return input_, target\n",
     "\n",
-    "train_input, train_target = generate_set(20)\n",
-    "test_input, test_target = generate_set(20)"
+    "train_input, train_target = generate_set(200)\n",
+    "test_input, test_target = generate_set(200)"
    ]
   },
   {
@@ -217,55 +218,55 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "40.804527282714844\n",
+      "156.3612518310547\n",
       "1\n",
-      "38.16957092285156\n",
+      "143.93032836914062\n",
       "2\n",
-      "35.781131744384766\n",
+      "134.49656677246094\n",
       "3\n",
-      "33.610416412353516\n",
+      "127.0963134765625\n",
       "4\n",
-      "31.632753372192383\n",
+      "121.004638671875\n",
       "5\n",
-      "29.82686996459961\n",
+      "115.86997985839844\n",
       "6\n",
-      "28.174400329589844\n",
+      "111.46519470214844\n",
       "7\n",
-      "26.65934944152832\n",
+      "107.68602752685547\n",
       "8\n",
-      "25.267751693725586\n",
+      "104.46123504638672\n",
       "9\n",
-      "23.97368621826172\n",
+      "101.69342041015625\n",
       "10\n",
-      "22.728851318359375\n",
+      "99.25413513183594\n",
       "11\n",
-      "21.584157943725586\n",
+      "97.1548843383789\n",
       "12\n",
-      "20.52997398376465\n",
+      "95.36774444580078\n",
       "13\n",
-      "19.55377960205078\n",
+      "93.86734771728516\n",
       "14\n",
-      "18.647554397583008\n",
+      "92.60344696044922\n",
       "15\n",
-      "17.809160232543945\n",
+      "91.55255126953125\n",
       "16\n",
-      "17.032548904418945\n",
+      "90.67800903320312\n",
       "17\n",
-      "16.31233024597168\n",
+      "89.94464874267578\n",
       "18\n",
-      "15.643628120422363\n",
+      "89.31330871582031\n",
       "19\n",
-      "15.022071838378906\n",
+      "88.79692840576172\n",
       "20\n",
-      "14.44438648223877\n",
+      "88.37225341796875\n",
       "21\n",
-      "13.908090591430664\n",
+      "88.02761840820312\n",
       "22\n",
-      "13.407808303833008\n",
+      "87.74763488769531\n",
       "23\n",
-      "12.935386657714844\n",
+      "87.51737976074219\n",
       "24\n",
-      "12.489516258239746\n"
+      "87.32195281982422\n"
      ]
     }
    ],
