--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,20 +55,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_simple_convnet():\n",
-    "    return nn.Sequential(\n",
-    "        nn.Conv2d(2, 10, kernel_size=2),\n",
-    "        nn.MaxPool2d(2),\n",
-    "        nn.Conv2d(10, 10, kernel_size=2),\n",
-    "        nn.MaxPool2d(2),\n",
-    "        nn.Flatten(),\n",
-    "        nn.Linear(40, 1),\n",
-    "        nn.Softmax()\n",
-    "    )"
+    "class model_1(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(model_1, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(2, 10, kernel_size=3)\n",
+    "#         self.maxpool1 = nn.MaxPool2d(2)\n",
+    "        \n",
+    "        self.conv2 = nn.Conv2d(10, 10, kernel_size=3)\n",
+    "#         self.maxpool2 = nn.MaxPool2d(2)\n",
+    "\n",
+    "        self.dense1 = nn.Linear(40, 10)\n",
+    "        self.dense2 = nn.Linear(10, 1)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "#         x = self.maxpool1(self.conv1(x))\n",
+    "#         x = self.maxpool2(self.conv2(x))\n",
+    "\n",
+    "        x = F.max_pool2d(self.conv1(x), kernel_size=2)\n",
+    "        x = F.max_pool2d(self.conv2(x), kernel_size=2)\n",
+    "        x = F.relu(self.dense1(x.view(-1)))\n",
+    "        x = F.sigmoid(self.dense2(x))\n",
+    "        return x"
    ]
   },
   {
@@ -80,41 +91,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(model, train_input, train_target, epochs):\n",
     "    # Inspired by exercise corrige \n",
+    "    model.train()\n",
     "    \n",
     "    criterion = nn.BCELoss()\n",
-    "    eta = 1e-1\n",
+    "    eta = 0.01\n",
     "\n",
     "    for e in range(epochs):\n",
     "        sum_loss = 0\n",
     "        for i in range(0, train_input.size(0)):\n",
-    "            output = model(train_input[i:i+1])\n",
+    "            output = model(train_input[i:i+1])[0]\n",
     "            loss = criterion(output, train_target[i:i+1].float())\n",
     "            model.zero_grad()\n",
     "            loss.backward()\n",
     "            sum_loss = sum_loss + loss.item()\n",
-    "            with torch.no_grad():\n",
-    "                for p in model.parameters():\n",
-    "                    p -= eta * p.grad"
+    "\n",
+    "            for p in model.parameters():\n",
+    "                p -= eta * p.grad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_model(model, test_input, test_target):\n",
+    "    model.eval()\n",
     "    criterion = nn.BCELoss()\n",
     "    preds_proba = model(test_input)\n",
+    "    print(preds_proba.shape)\n",
     "    \n",
     "    loss = criterion(preds_proba, test_target.float()).item()\n",
-    "    _, preds = torch.max(preds_proba, 1)\n",
     "    \n",
     "    accuracy = (preds == test_target).sum().item()/preds.size(0)\n",
     "    #accuracy = sum([pred == truth for pred, truth in zip(preds, test_target)])\n",
@@ -123,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,28 +157,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 : loss 11.908929824829102 - accuracy 0.431\n"
+      "torch.Size([10, 2, 3, 3])\n",
+      "torch.Size([10])\n",
+      "torch.Size([10, 10, 3, 3])\n",
+      "torch.Size([10])\n",
+      "torch.Size([10, 40])\n",
+      "torch.Size([10])\n",
+      "torch.Size([1, 10])\n",
+      "torch.Size([1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in model.parameters():\n",
+    "    print(p.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\SimonRoquette\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\nn\\functional.py:1569: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
+      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n",
+      "C:\\Users\\SimonRoquette\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\nn\\modules\\loss.py:516: UserWarning: Using a target size (torch.Size([1])) that is different to the input size (torch.Size([])) is deprecated. Please ensure they have the same size.\n",
+      "  return F.binary_cross_entropy(input, target, weight=self.weight, reduction=self.reduction)\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "RuntimeError",
+     "evalue": "a leaf Variable that requires grad is being used in an in-place operation.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-165-a4c90727279d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mindices_shuffle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandperm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     train_model(model, \n\u001b[0m\u001b[0;32m     12\u001b[0m                 \u001b[0mx_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices_shuffle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m                 \u001b[0my_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices_shuffle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-159-905a5c6244e7>\u001b[0m in \u001b[0;36mtrain_model\u001b[1;34m(model, train_input, train_target, epochs)\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_target\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m             \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m             \u001b[0msum_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum_loss\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[0;32m    193\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    194\u001b[0m         \"\"\"\n\u001b[1;32m--> 195\u001b[1;33m         \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    196\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    197\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[0;32m     95\u001b[0m         \u001b[0mretain_graph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 97\u001b[1;33m     Variable._execution_engine.run_backward(\n\u001b[0m\u001b[0;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m         allow_unreachable=True)  # allow_unreachable flag\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-83-0546e27f6f57>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mindices_shuffle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandperm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     train_model(model, \n\u001b[0m\u001b[0;32m     12\u001b[0m                 \u001b[0mx_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices_shuffle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m                 \u001b[0my_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices_shuffle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-80-c8b14e85860d>\u001b[0m in \u001b[0;36mtrain_model\u001b[1;34m(model, train_input, train_target, epochs)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m                 \u001b[0mp\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0meta\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m: a leaf Variable that requires grad is being used in an in-place operation."
      ]
     }
    ],
@@ -177,7 +216,7 @@
     "accuracies = []\n",
     "for i_train in range(number_training):\n",
     "    \n",
-    "    model = create_simple_convnet()\n",
+    "    model = model_1()\n",
     "    indices_shuffle = torch.randperm(N)\n",
     "    \n",
     "    train_model(model, \n",
@@ -186,7 +225,7 @@
     "                epochs = epochs)\n",
     "    \n",
     "    loss, accuracy = evaluate_model(model, x_test, y_test)\n",
-    "    print(i_train, \": loss\", loss, \"- accuracy\", accuracy)\n",
+    "    print(\"Attempt\", i_train, \": loss\", loss, \"- accuracy\", accuracy)\n",
     "    losses.append(loss)\n",
     "    accuracies.append(accuracy)\n",
     "\n",
