--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20706\n"
+      "4530\n"
      ]
     }
    ],
@@ -211,8 +211,7 @@
     "        self.conv1 = nn.Conv2d(2, 16, kernel_size=2, padding=1)        \n",
     "        self.conv2 = nn.Conv2d(16, 32, kernel_size=2)\n",
     "\n",
-    "        self.dense1 = nn.Linear(1152, 16)\n",
-    "        self.dense2 = nn.Linear(16, 2)\n",
+    "        self.dense1 = nn.Linear(1152, 2)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        x = F.leaky_relu(self.conv1(x))\n",
@@ -221,8 +220,7 @@
     "        \n",
     "        x = torch.flatten(x, 1)\n",
     "        \n",
-    "        x = F.leaky_relu(self.dense1(x))\n",
-    "        x = self.dense2(x)\n",
+    "        x = self.dense1(x)\n",
     "        return x\n",
     "\n",
     "model_test = model_1()\n",
@@ -232,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +290,6 @@
    "source": [
     "class model_1_ws(nn.Module):    \n",
     "    def __init__(self):\n",
-    "        # Weight sharing model feature extraction pipe is half bigger because it needs\n",
-    "        # To encapsulate features of 1 channel instead of 2\n",
     "        super(model_1_ws, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 8, kernel_size=2, padding=1)        \n",
     "        self.conv2 = nn.Conv2d(8, 16, kernel_size=2)\n",
@@ -325,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20820\n"
+      "13732\n"
      ]
     }
    ],
@@ -345,8 +341,7 @@
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=2, padding=1)        \n",
     "        self.conv2 = nn.Conv2d(16, 32, kernel_size=2)\n",
     "\n",
-    "        self.dense1 = nn.Linear(1152, 16)\n",
-    "        self.dense_digits = nn.Linear(16, 10)\n",
+    "        self.dense1 = nn.Linear(1152, 10)\n",
     "        self.dense2 = nn.Linear(20, 2)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -354,15 +349,13 @@
     "        d1 = F.max_pool2d(d1, kernel_size=2) \n",
     "        d1 = F.leaky_relu(self.conv2(d1))\n",
     "        d1 = torch.flatten(d1, 1)\n",
-    "        d1 = F.leaky_relu(self.dense1(d1))\n",
-    "        d1 = self.dense_digits(d1)                    # digit prediction of the first image\n",
+    "        d1 = self.dense1(d1)\n",
     "        \n",
     "        d2 = F.leaky_relu(self.conv1(x[:, 1:2, ...]))\n",
     "        d2 = F.max_pool2d(d2, kernel_size=2) \n",
     "        d2 = F.leaky_relu(self.conv2(d2))\n",
     "        d2 = torch.flatten(d2, 1)\n",
-    "        d2 = F.leaky_relu(self.dense1(d2))\n",
-    "        d2 = self.dense_digits(d2)                    # digit prediction of the second image\n",
+    "        d2 = self.dense1(d2)\n",
     "        \n",
     "        x = F.leaky_relu(torch.cat((torch.softmax(d1, -1), torch.softmax(d2, -1)), 1))\n",
     "        x = torch.flatten(x, 1)\n",
@@ -1248,37 +1241,136 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Best accuracy 78.15 (5.252) with params for model model 0 : optim : Adam, lr : 0.0010, batchsize : 16\n",
+    "Best accuracy 79.05 (3.123) with params for model model 1 : optim : Adam, lr : 0.0010, batchsize : 16\n",
+    "Best accuracy 80.30 (9.310) with params for model model 1 WS : optim : Adam, lr : 0.0030, batchsize : 16\n",
+    "Best accuracy 85.65 (8.652) with params for model model 1 AUX 2 : optim : Adam, lr : 0.0030, batchsize : 16\n",
+    "Best accuracy 91.90 (3.690) with params for model model 1 WS AUX 2 : optim : Adam, lr : 0.0030, batchsize : 16\n",
+    "Best accuracy 77.75 (2.962) with params for model model 2 : optim : Adam, lr : 0.0005, batchsize : 16\n",
+    "Best accuracy 81.50 (3.600) with params for model model 2 WS : optim : Adam, lr : 0.0005, batchsize : 16\n",
+    "Best accuracy 79.10 (7.190) with params for model model 2 AUX 1 : optim : Adam, lr : 0.0010, batchsize : 16\n",
+    "Best accuracy 85.45 (9.972) with params for model model 2 AUX 2 : optim : Adam, lr : 0.0020, batchsize : 16\n",
+    "Best accuracy 92.40 (2.940) with params for model model 2 WS AUX 2 : optim : Adam, lr : 0.0030, batchsize : 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "results = []    # Results is cumulative, each model is given with its best optimizer and learning parameters\n",
     "model_list = [\n",
-    "             ('MLP ', model_0, (\"Adam\", 0.001, 32)),\n",
-    "             ('Model 1', model_1, (\"Adam\", 0.0005, 32)),\n",
-    "             ('Model 1 WS', model_1_ws, (\"Adam\", 0.001, 16)),\n",
+    "             ('MLP ', model_0, (\"Adam\", 0.001, 16)),\n",
+    "             ('Model 1', model_1, (\"Adam\", 0.001, 32)),\n",
+    "             ('Model 1 WS', model_1_ws, (\"Adam\", 0.003, 16)),\n",
     "             ('Model 1 AUX2', model_1_aux2, (\"Adam\", 0.003, 16)),\n",
     "             ('Model 1 WS AUX2', model_1_ws_aux2, (\"Adam\", 0.003, 16)),\n",
-    "             ('Model 2', model_2, (\"Adam\", 0.002, 16)),\n",
+    "             ('Model 2', model_2, (\"Adam\", 0.0005, 16)),\n",
     "             ('Model 2 WS', model_2_ws, (\"Adam\", 0.0005, 16)),\n",
-    "             ('Model 2 AUX1', model_2_aux1, (\"Adam\", 0.002, 16)),\n",
-    "             ('Model 2 AUX2', model_2_aux2, (\"Adam\", 0.003, 16)),\n",
-    "             ('Model 2 WS AUX2', model_2_ws_aux2, (\"Adam\", 0.003, 32)),\n",
+    "             ('Model 2 AUX1', model_2_aux1, (\"Adam\", 0.001, 16)),\n",
+    "             ('Model 2 AUX2', model_2_aux2, (\"Adam\", 0.002, 16)),\n",
+    "             ('Model 2 WS AUX2', model_2_ws_aux2, (\"Adam\", 0.003, 16)),\n",
     "            ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp = experiment_model(*('Model 2', model_2, (\"Adam\", 0.001, 16)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting 20 training of 25 epochs, with model  'MLP ' containing 58690 parameters. \n",
+      "\n",
+      "Attempt 1 - accuracy 82.30%\n",
+      "Attempt 2 - accuracy 80.70%\n",
+      "Attempt 3 - accuracy 81.10%\n",
+      "Attempt 4 - accuracy 80.70%\n",
+      "Attempt 5 - accuracy 81.30%\n",
+      "Attempt 6 - accuracy 80.00%\n",
+      "Attempt 7 - accuracy 80.60%\n",
+      "Attempt 8 - accuracy 80.40%\n",
+      "Attempt 9 - accuracy 80.60%\n",
+      "Attempt 10 - accuracy 79.70%\n",
+      "Attempt 11 - accuracy 79.90%\n",
+      "Attempt 12 - accuracy 81.90%\n",
+      "Attempt 13 - accuracy 81.50%\n",
+      "Attempt 14 - accuracy 80.80%\n",
+      "Attempt 15 - accuracy 81.10%\n",
+      "Attempt 16 - accuracy 80.80%\n",
+      "Attempt 17 - accuracy 82.60%\n",
+      "Attempt 18 - accuracy 80.60%\n",
+      "Attempt 19 - accuracy 81.00%\n",
+      "Attempt 20 - accuracy 80.90%\n",
+      "\n",
+      "Experiment results :\n",
+      "Accuracy mean : 80.92% (0.5)\n",
+      "Average training time : 4.6 seconds (0.0)\n",
+      "Average inference time : 0.0020 seconds (0.0000)\n",
+      "================================================================================\n",
+      "Starting 20 training of 25 epochs, with model  'Model 1' containing 20706 parameters. \n",
+      "\n",
+      "Attempt 1 - accuracy 80.20%\n",
+      "Attempt 2 - accuracy 81.50%\n",
+      "Attempt 3 - accuracy 81.40%\n",
+      "Attempt 4 - accuracy 76.30%\n",
+      "Attempt 5 - accuracy 80.90%\n",
+      "Attempt 6 - accuracy 79.40%\n",
+      "Attempt 7 - accuracy 81.40%\n",
+      "Attempt 8 - accuracy 81.70%\n",
+      "Attempt 9 - accuracy 80.50%\n",
+      "Attempt 10 - accuracy 80.00%\n",
+      "Attempt 11 - accuracy 73.40%\n",
+      "Attempt 12 - accuracy 82.00%\n",
+      "Attempt 13 - accuracy 81.30%\n",
+      "Attempt 14 - accuracy 79.80%\n",
+      "Attempt 15 - accuracy 82.40%\n",
+      "Attempt 16 - accuracy 77.60%\n",
+      "Attempt 17 - accuracy 81.20%\n",
+      "Attempt 18 - accuracy 79.30%\n",
+      "Attempt 19 - accuracy 81.80%\n",
+      "Attempt 20 - accuracy 80.80%\n",
+      "\n",
+      "Experiment results :\n",
+      "Accuracy mean : 80.14% (4.5)\n",
+      "Average training time : 3.2 seconds (0.0)\n",
+      "Average inference time : 0.0019 seconds (0.0000)\n",
+      "================================================================================\n",
+      "Starting 20 training of 25 epochs, with model  'Model 1 WS' containing 12120 parameters. \n",
+      "\n",
+      "Attempt 1 - accuracy 82.30%\n",
+      "Attempt 2 - accuracy 82.10%\n",
+      "Attempt 3 - accuracy 82.70%\n",
+      "Attempt 4 - accuracy 84.10%\n",
+      "Attempt 5 - accuracy 84.30%\n",
+      "Attempt 6 - accuracy 81.40%\n",
+      "Attempt 7 - accuracy 80.20%\n",
+      "Attempt 8 - accuracy 82.00%\n",
+      "Attempt 9 - accuracy 82.50%\n",
+      "Epoch 6 : loss 16.299\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-23c77f05049a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mmodel_params\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmodel_list\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexperiment_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mmodel_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-23-31a8ec0150ff>\u001b[0m in \u001b[0;36mexperiment_model\u001b[1;34m(model_name, build_model, params)\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[0mindices_shuffle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandperm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         train_loss = train_model(model, x_train[indices_shuffle].to(device),\n\u001b[0m\u001b[0;32m     43\u001b[0m                                  \u001b[0my_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices_shuffle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m                                  \u001b[0my_train_classes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices_shuffle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-18-10833c532032>\u001b[0m in \u001b[0;36mtrain_model\u001b[1;34m(model, train_input, train_target, digit_target, epochs, optimizer, loss_function, digit_loss, batch_size, auxiliary, auxiliary_v1, verbose)\u001b[0m\n\u001b[0;32m     49\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[0mloss_total\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m             \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m             \u001b[0msum_loss\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mloss_total\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\autograd\\grad_mode.py\u001b[0m in \u001b[0;36mdecorate_context\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[1;32mdef\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\optim\\adam.py\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self, closure)\u001b[0m\n\u001b[0;32m    109\u001b[0m                 \u001b[0mstep_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'lr'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mbias_correction1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 111\u001b[1;33m                 \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddcdiv_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexp_avg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdenom\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mstep_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    112\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    113\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# model_list = [\n",
     "# # #             ('Simple Net', model_0),\n",
